# libalgebra

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.remote-cpp-env  LibalgebraConfig.cmake.in  README.md  libalgebra.sln  libalgebra.vcxproj  libalgebra.vcxproj.filters
addons/: clone_unordered_map.h  gmpwrapper.h  sized_unordered_map.h
benchmarks/: CMakeLists.txt  multiplication_bm.cpp
benchmarks/antipode/: CMakeLists.txt  antipode_bm.cpp
benchmarks/multiplication/: CMakeLists.txt  multiplication_bm.cpp  multiplication_single.cpp
cmake/: check_header_independence.cmake  libalgebra_test_helper.cmake
cmake/Modules/: FindBignum.cmake  UnitTestPP.cmake  UnitTestPP_DiscoverTests.cmake
libalgebra/: _tensor_basis.h  alg_types.h  algebra.h  alternative_multiplications.h  area_tensor_basis.h  area_tensor_multiplication.h  base_basis.h  base_vector.h  basis.h  basis_traits.h  coefficients.h  compat.h  complex.h  composition_operator.h  constlog2.h  constpower.h  dense_storage.h  dense_vector.h  dot_product_implementations.h  dual_pairing.h  free_extension.h  functionals.h  giles_multiplication.h  half_shuffle_tensor_basis.h  half_shuffle_tensor_multiplication.h  hall_set.h  hybrid_vector.h  implementation_types.h  implimentation_types.h  iterators.h  libalgebra.h  lie.h  lie_basis.h  lie_inner_product.h  monomial_basis.h  mpfloat_coefficients.h  multi_linear_operators.h  multi_polynomial.h  multiplication_helpers.h  operators.h  (+20 more)
libalgebra/basis/: basis.h  key_iterators.h  tags.h
libalgebra/coefficients/: coefficients.h  complex.h  gmp_ser.h  mpfloat_coefficients.h  mpfloat_field.h  (+2 more)
tests/: CMakeLists.txt  README.md
tests/LibAlgebraUnitTests/: CMakeLists.txt
tests/common/: CMakeLists.txt  compat.h  helpers.h  memfile.cpp  memfile.h  multi_test.h  random_coeffs.h  random_vector_generator.h  reporter.cpp  reporter.h  rng.h  run_tests.cpp  simple_basis.h  small_vector.h  time_and_details.h
tests/integration_tests/: AlgebraFunctionsTests.cpp  CMakeLists.txt  HallSetTests.cpp  LatticePathTests.cpp  LibAlgebraUnitTests.cpp  MemoryMappedFilesDocumentation.htm  OMPSigsTests.cpp  SHOW.h  SigHelpers.h  TreeBufferHelper.cpp  TreeBufferHelper.h  alg_framework.h  brown_path_increments.h  categorical_path.h  log2ceil.h  makebm.cpp  makebm.h  speed_tests.cpp  tests_TENSOR_LIE_CBH_MAPS.cpp  tests_libalgebra-demo.cpp  x64sigs.cpp
tests/integration_tests/signature_tests/: CMakeLists.txt  accuracy_suite.ins  double_path_suite.ins  generic_coefficient.h  generic_path.h  rational_path_suite.ins  run_tests.cpp  test_brownian_path.cpp  test_innovative_path.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/adjoint/: CMakeLists.txt  dual.cpp  test_adjoint.cpp
tests/unit_tests/algebra/: CMakeLists.txt  alg_mul_suite.h  framework_fixture.h  simple_algebra_basis.h  test_algebra_product.cpp
tests/unit_tests/antipode/: CMakeLists.txt  test_antipode.cpp
tests/unit_tests/basis/: CMakeLists.txt  basis_iteration_suite.h  test_basis_iteration.cpp  test_lie_basis_iteration.cpp  test_tensor_basis_iteration.cpp
tests/unit_tests/coefficients/: CMakeLists.txt  polynomial_coeff_ring.cpp  standard_coefficient_test_suite.h  test_double_field.cpp  test_float_field.cpp  test_mpfloat_fallback_field.cpp  test_mpfloat_field.cpp  test_rational_fallback_field.cpp  test_rational_field.cpp  unital_coefficient_test_suite.h
tests/unit_tests/dual_pairing/: CMakeLists.txt  test_tensor_dual_pairing.cpp
tests/unit_tests/half-shuffle-tests/: CMakeLists.txt  half_shuffle_fixture.h  test_half_shuffle.cpp
tests/unit_tests/hall_set/: CMakeLists.txt  test_hall_set.cpp
tests/unit_tests/involute/: CMakeLists.txt  test_involute.cpp
tests/unit_tests/lie/: CMakeLists.txt  run_tests.cpp  test_basis.cpp  test_dense_lie_multiplication.cpp  test_function_extension.cpp  test_hall_basis.cpp  test_lie_multiplication.cpp
tests/unit_tests/multiplication/: CMakeLists.txt  test_multiplication.cpp
tests/unit_tests/multipoly/: CMakeLists.txt  test_multipoly_prod.cpp
tests/unit_tests/operators/: CMakeLists.txt  test_free_extension.cpp  test_lie_inner_product.cpp  test_operator_composition.cpp  test_operator_sum.cpp  test_operators_smul.cpp  test_recalibrate_operator.cpp  test_shuffle_functional.cpp  test_tensor_defined_operator.cpp  test_tensor_multiplication_operator.cpp
tests/unit_tests/serialization/: CMakeLists.txt  dense_vec_serialization.cpp  double_dense_vec_serialization.cpp  fixture.cpp  fixture.h  hybrid_vector_serialization.cpp  sparse_vector_serialization.cpp  temporary_directory.cpp  temporary_directory.h  test_dense_storage.cpp  test_hall_set_serialize.cpp  test_higher_classes.cpp
tests/unit_tests/shuffle-tensor-tests/: CMakeLists.txt  test_shuffle_tensor.cpp
tests/unit_tests/signature_tests/: CMakeLists.txt  coefficient_path_suite.ins  float_path_suite.ins  generic_coefficient.h  generic_lie_increment.h  generic_path.h  test_brownian_path.cpp  test_innovative_path.cpp
tests/unit_tests/tangents/: CMakeLists.txt  test_tangents.cpp  test_tangents.h
tests/unit_tests/tensor/: CMakeLists.txt  tensor_exp_suite.h  tensor_inverse_suite.h  tensor_log_suite.h  tensor_roundtrip_suite.h  test_basis.cpp  test_dense_tensor_functions.cpp  test_dense_tensor_multiplication.cpp  test_hybrid_tensor_functions.cpp  test_hybrid_tensor_multiplication.cpp  test_signature_calc.cpp  test_sparse_tensor_functions.cpp  test_sparse_tensor_multiplication.cpp  test_tensor_creation.cpp  test_tensor_functions.cpp  test_tensor_multiplication.cpp  test_tensor_size_info.cpp
tests/unit_tests/utils/: CMakeLists.txt  test_integer_maths.cpp
tests/unit_tests/vector/: CMakeLists.txt  framework_fixture.h  test_dense.cpp  test_dense_storage.cpp  test_flat_sparse_vector.cpp  test_hybrid.cpp  test_sparse.cpp  vector_arithmetic_suite.h  vector_binary_transform_suite.h  vector_comparison_suite.h  vector_element_access_suite.h  vector_iterator_suite.h  vector_norm_suite.h  vector_properties_suite.h  vector_suite.h
tests/unit_tests/width1_tests/: CMakeLists.txt  types.cpp  width1.h  width1_lie.cpp  width1_tensors.cpp
(+35 files in other folders)
